Fix the css cosmetic problems in registration

--- a/client/src/app/content/add-content/add-category/add-category.component.html
+++ b/client/src/app/content/add-content/add-category/add-category.component.html
@@ -9,6 +9,6 @@
       <label for="category" class="col-sm-2 control-label">שם הקטגוריה</label>
     </div>
 
-    <button type="submit" class="btn btn-default" [disabled]="!categoryForm.valid">Submit</button>
+    <button type="submit" class="btn btn-default" [disabled]="!categoryForm.valid">הוסף</button>
   </form>
 </div>
