--- a/client/src/app/content/add-content/add-book/add-book.component.html
+++ b/client/src/app/content/add-content/add-book/add-book.component.html
@@ -64,6 +64,6 @@
       <label for="price" class="col-sm-2 control-label">מלאי</label>
     </div>
 
-    <button type="submit" class="btn btn-default" [disabled]="!bookForm.valid">Submit</button>
+    <button type="submit" class="btn btn-default" [disabled]="!bookForm.valid">הוסף</button>
   </form>
 </div>
