--- a/client/src/app/content/add-content/delete-category/delete-category.component.html
+++ b/client/src/app/content/add-content/delete-category/delete-category.component.html
@@ -10,6 +10,6 @@
       <label for="category" class="col-sm-2 control-label">קטגוריה</label>
     </div>
 
-    <button type="submit" class="btn btn-default" [disabled]="!delCategoryForm.valid">Submit</button>
+    <button type="submit" class="btn btn-default" [disabled]="!delCategoryForm.valid">מחק</button>
   </form>
 </div>
