--- a/client/src/app/content/book-list/book/book.component.html
+++ b/client/src/app/content/book-list/book/book.component.html
@@ -7,8 +7,8 @@
       <p>מחיר: ₪{{ book.price }}</p>
     </div>
     <div class="btn-action">
-      <button *ngIf="userId" class="btn btn-purchase" (click)="addBookToCart(book.id)">רכישה</button>
-      <button class="btn btn-read-more" (click)="onSelect(book)">קרא עוד</button>
+      <button *ngIf="userId" class="btn btn-purchase" (click)="addBookToCart(book.id)" style="width:50%;">הוסף לעגלה</button>
+      <button class="btn btn-read-more" (click)="onSelect(book)" style="width:45%;">קרא עוד</button>
     </div>
   </div>
 </div>
