--- a/client/src/app/shared/nav/nav.component.html
+++ b/client/src/app/shared/nav/nav.component.html
@@ -2,7 +2,7 @@
   <!-- The actions bar -->
   <div id="user-actions" class="row">
     <div class="col-sm-12 col-md-10">
-      <a *ngIf="haveAuth" (click)="toWishlist()">רשימת הקניות שלי</a>
+      <a *ngIf="haveAuth" (click)="toWishlist()">רשימת המשאלות שלי</a>
       <a *ngIf="!haveAuth" (click)="showLogin()">התחבר</a>
       <a *ngIf="isAdmin" class="btn add-category" (click)="addCategory()">הוסף קטגוריה</a>
       <a *ngIf="isAdmin" class="btn add-book" (click)="addBook()">הוסף ספר</a>
@@ -33,7 +33,7 @@
       <div id="cart" class="col-sm-4 col-md-2" *ngIf="haveAuth">
         <h3>עגלת קניות</h3>
         <a (click)="toCart()">
-          {{ cart.totalItems + ' פריטים' + ' | ' + '₪' + cart.totalAmount}}
+          ישנם {{ cart.totalItems + ' פריטים בעגלת הקניות' + ' | סכום ביניים ' + '₪' + cart.totalAmount}}
         </a>
       </div>
     </div>
@@ -57,7 +57,6 @@
       <div class="login-content">
         <!-- Model header -->
         <h2 class="modal-title">ברוכים הבאים</h2>
-        <span (click)="registerNewUser()" style="margin-right: 25px; cursor: pointer;">אין לך שם משתמש? הרשם</span>
 
         <!-- Model body -->
         <div class="modal-body">
@@ -85,8 +84,8 @@
 
         <!-- Model footer -->
         <div class="model-footer">
-          <button type="submit" class="btn btn-login pull-left" (click)="login()">התחבר</button>
-
+            <button type="submit" class="btn btn-login pull-left" (click)="login()">התחבר</button>
+            <button type="submit" class="btn btn-login pull-left" (click)="registerNewUser()">הרשמה</button>
         </div>
       </div>
     </div>
@@ -106,23 +105,19 @@
         <div class="modal-body">
           <form [formGroup]="newUserForm" (submit)="onSubmit($event)">
             <div class="form-group col-sm-6">
-              <label for="password">Password</label>
               <input type="password" class="form-control" id="password" placeholder="סיסמה" formControlName="password">
             </div>
             <div class="form-group col-sm-6">
-              <label for="userName">Username</label>
               <input type="text" class="form-control" id="username" placeholder="שם משתמש" formControlName="username">
             </div>
             <div class="form-group col-sm-6">
-              <label for="lastname">Lastname</label>
               <input type="text" class="form-control" id="lastName" placeholder="שם משפחה" formControlName="lastName">
             </div>
             <div class="form-group col-sm-6">
-              <label for="firstName">Firstname</label>
               <input type="text" class="form-control" id="firstName" placeholder="שם פרטי" formControlName="firstName">
             </div>
 
-            <button type="submit" class="btn btn-default">הירשם</button>
+            <button type="submit" class="btn btn-default" style="float:left;margin-left:14px;">הירשם</button>
           </form>
         </div>
 
