--- a/client/src/app/shared/nav/nav.component.scss
+++ b/client/src/app/shared/nav/nav.component.scss
@@ -7,7 +7,6 @@
 header {
   #user-actions {
     width: 100%;
-    height: 5rem;
     background: #223542;
     color: #c0c0c0;
     margin: 0;
@@ -23,9 +22,14 @@ header {
 
   #logo {
     cursor: pointer;
+    margin-top: 15px;
   }
 
   #cart {
+      margin-right: 16.7%;
+      float: right;
+      margin-bottom: 15px;
+      width: 25%;
     a {
       cursor: pointer;
     }
@@ -106,7 +110,7 @@ header {
 
       &.btn-login {
         background-color: #37aae0;
-        width: 250px;
+        width: 117px;
       }
 
       &:hover {
@@ -117,7 +121,8 @@ header {
   }
 
   .form-group {
-    padding: 20px;
+    margin-bottom: 22.5px;
+    float: left;
   }
 
   .modal-dialog {
@@ -127,7 +132,6 @@ header {
 
   .hero-image {
     float: right;
-    width: 45%;
     display: inline-block;
 
     img {
@@ -150,6 +154,9 @@ header {
     .modal-title {
         text-align: center;
         font-weight: bold;
+        width: 90%;
+        float: left;
+        margin: 11px 0;
     }
   }
 }
